Add English Description

--- a/index.html
+++ b/index.html
@@ -7,17 +7,41 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css">
   <link rel="stylesheet" href="style.css">
-  <title>OfSystems Products Starter</title>
+  <title>Indicatoare de Greutate si Accesorii</title>
 </head>
 <body>
 <section class="main_container">
   <div class="grid_container">
-    <img src="https://picsum.photos/500/300.webp" alt="" class="grid_img_1 img-responsive">
-    <div class="grid_text_media_B c_text">
-      <h3>Lorem ipsum dolor sit.</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aut neque odio quis quos rerum vel? Accusamus
-        debitis dolorum error excepturi illo ipsum labore, nemo obcaecati officia pariatur perferendis possimus quos
-        repudiandae saepe sunt vel veniam voluptate. Delectus nisi, veritatis?</p>
+    <img src="./images/indicatoare_01.webp" alt="indicatoare" class="grid_img_1">
+    <div class="grid_text_1 c_text">
+      <h3>Vehicle Scale Additions</h3>
+      <p>Whether your truck scale is new, old or in between – having the right accessories to accompany it can save you
+        time and money. The vehicle scale experts at METTLER TOLEDO can help you determine what scale additions are
+        right for your business. Look no further than METTLER TOLEDO for all of your vehicle scale, service and
+        accessory needs.</p>
+    </div>
+    <img class="grid_img_1B" src="./images/indicatoare_02.webp" alt="indicatoare">
+    <div class="grid_text_media c_text">
+      <h3>Accessory Applications</h3>
+      <p>Every business is different and has different needs when it comes to their truck scale. METTLER TOLEDO offers a
+        variety of options for different applications: controlling the flow of traffic, fraud-prevention products,
+        truck-scale foundations and more. We provide a full-service experience from start to finish and beyond.</p>
+    </div>
+    <img class="grid_img_2" src="./images/indicatoare_03.webp" alt="indicatoare">
+    <div class="grid_text_2 c_text">
+      <h3>Remote Displays</h3>
+      <p>Designed with the harsh conditions that our truck scales endure in mind, our remote displays are built to last.
+        Remote displays benefit both truck drivers and scale-house personnel. From a single display to many, several
+        configurations are available.</p>
+    </div>
+    <img class="grid_img_3" src="./images/indicatoare_04.webp" alt="indicatoare"/>
+    <div class="grid_text_3 c_text">
+      <h3>Vehicle-Scale Management Software</h3>
+      <p>Even if you have an extremely durable and accurate scale that weighs hundreds of trucks per day, without good
+        data-management software, profits could be slipping through the cracks. Hand-written transactions and free
+        programs are inaccurate and unsafe. Protect your business with DataBridge by METTLER TOLEDO.</p>
+      <a href="https://www.mt.com/int/en/home/library/on-demand-webinars/transport-logistics/VEH_Software_Transaction_Management.html"
+         target="_blank" rel="noreferrer noopener">Click to view on-demand webinar</a>
     </div>
   </div>
 </section>
