--- a/index.html
+++ b/index.html
@@ -1,23 +1,90 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css">
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8"/>
+  <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+  />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+  <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css"/>
+  <link rel="stylesheet" href="style.css"/>
   <title>OfSystems Products Starter</title>
 </head>
 <body>
 <section class="main_container">
   <div class="grid_container">
-    <img src="https://picsum.photos/500/300.webp" alt="" class="grid_img_1 img-responsive">
+    <div class="iframe-wrapper grid_img_1_2">
+      <iframe
+          class="responsive-iframe"
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/65L7LtHICsE"
+          title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+      ></iframe>
+    </div>
     <div class="grid_text_media_B c_text">
-      <h3>Lorem ipsum dolor sit.</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aut neque odio quis quos rerum vel? Accusamus
-        debitis dolorum error excepturi illo ipsum labore, nemo obcaecati officia pariatur perferendis possimus quos
-        repudiandae saepe sunt vel veniam voluptate. Delectus nisi, veritatis?</p>
+      <h3>Calitate Exceptionala</h3>
+      <p>
+        Din 1988, tehnologia celulelor de sarcina POWERCELL a fost lider in aplicatiile de cantarire de capacitate mare.
+        Celulele de sarcina POWERCELL PDX sunt a treia generatie a acestei tehnologii. Vedeti cum METTLER TOLEDO
+        utilizeaza procese si teste de precizie pentru a realiza acesti senzori de cantarire unici intr-o unitate
+        specializata.
+      </p>
+    </div>
+    <img
+        class="grid_img_1C img-responsive"
+        src="./Images/Modernizare_Cantare_Auto/modernizareCantareAuto_01.webp"
+        alt="Cantare Auto"
+    />
+    <div class="grid_text_1B c_text">
+      <h3>Upgrade-uri pentru Cantare de Camion</h3>
+      <p>
+        Sunt disponibile kituri de conversie pentru adaptarea cantarelor existente pentru camioane si sine cu cea mai
+        recenta tehnologie de catarire electronica. Aceste kituri usor de instalat pot fi folosite pentru a instala
+        celulele de sarcina POWERCELL in locul tehnologiilor alternative. De asemenea, sunt disponibile kituri pentru a
+        actualiza generatiile anterioare de POWERCELL la cea mai recenta tehnologie.
+      </p>
+      <p>
+        De asemenea, kiturile pot fi utilizate pentru a face cantarele vehiculelor compatibile pentru utilizarea in zone
+        periculoase.
+      </p>
+    </div>
+    <img
+        class="img-responsive grid_img_2C"
+        src="./Images/Modernizare_Cantare_Auto/modernizareCantareAuto_02.webp"
+        alt="Cantare Auto"
+    />
+    <div class="grid_text_2B c_text">
+      <h3>
+        POWERCELL<sup>&reg;</sup> PDX<sup>&reg;</sup>
+      </h3>
+      <p><small>Beneficiile vorbesc de la sine:</small></p>
+      <ul>
+        <li>Fara cutii de jonctiune</li>
+        <li>Retea simplificata</li>
+        <li>Protectie impotriva trasnetului</li>
+        <li>Submersibil</li>
+        <li>Precizie de lunga durata</li>
+        <li>Diagnosticare predictiva</li>
+        <li>Design robust</li>
+        <li>Intretinere usoara</li>
+      </ul>
+    </div>
+    <img
+        class="grid_img_3C img-responsive"
+        src="./Images/Modernizare_Cantare_Auto/modernizareCantareAuto_03.webp"
+        alt="Cantare Auto"
+    />
+    <div class="grid_text_3B c_text">
+      <h3>Beneficiile preciziei imbunatatite</h3>
+      <p>
+        Cand actualizati cantarul actual al camionului la un sistem cu celule de sarcina POWERCELL, veti vedea imediat
+        efectele unei precizii imbunatatite a cantaririi. Cu un cantar de camion care functioneaza mai bine decat nou,
+        veti economisi bani la fiecare incarcatura - iar upgrade-ul se va amortiza rapid.
+      </p>
     </div>
   </div>
 </section>
