add MT english version

--- a/index.html
+++ b/index.html
@@ -12,12 +12,37 @@
 <body>
 <section class="main_container">
   <div class="grid_container">
-    <img src="https://picsum.photos/500/300.webp" alt="" class="grid_img_1 img-responsive">
-    <div class="grid_text_media_B c_text">
-      <h3>Lorem ipsum dolor sit.</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aut neque odio quis quos rerum vel? Accusamus
-        debitis dolorum error excepturi illo ipsum labore, nemo obcaecati officia pariatur perferendis possimus quos
-        repudiandae saepe sunt vel veniam voluptate. Delectus nisi, veritatis?</p>
+    <img src="./Images/Software_Gestiune_Cantariri/software_gestiune_cantarire_01.webp"
+         alt="software gestiune cantarire"
+         class="grid_img_1A img-responsive">
+    <div class="grid_text_1 c_text">
+      <h3>Vehicle-Scale Management Software</h3>
+      <p>Even if you have an extremely durable and accurate scale that weighs hundreds of trucks per day, without good
+        data-management software, profits could be slipping through the cracks. Handwritten transactions and free
+        programs are inaccurate and unsafe. Protect your business with DataBridge technology by METTLER TOLEDO.</p>
+    </div>
+    <img class="grid_media_1 img-responsive"
+         src="./Images/Software_Gestiune_Cantariri/software_gestiune_cantarire_03.webp"
+         alt="software gestiune cantarire">
+    <div class="grid_text_media c_text">
+      <h3>DataBridge<sup>&trade;</sup> MS</h3>
+      <p>DataBridge MS scale-house software is a highly sophisticated data-management system. With more features
+        available than ever, this powerful tool boasts:</p>
+      <ul>
+        <li>Clean and sophisticated data visualization</li>
+        <li>Automation and fraud prevention with driver terminals, cameras and hardware</li>
+        <li>Real-time data sharing between multiple users</li>
+        <li>Customized user roles</li>
+      </ul>
+    </div>
+    <img class="grid_img_2B img-responsive"
+         src="./Images/Software_Gestiune_Cantariri/software_gestiune_cantarire_02.webp"
+         alt="software gestiune cantarire"/>
+    <div class="grid_text_2 c_text">
+      <h3>DataBridge<sup>&trade;</sup> SS</h3>
+      <p>DataBridge SS scale-house software can automate your vehicle-weighing operation. Whether your business has been
+        operating for years or is just getting started, this powerful software package can make your job easier and your
+        business more profitable.</p>
     </div>
   </div>
 </section>
