Add images for Sisteme Dimensionare / Add English MT version

--- a/index.html
+++ b/index.html
@@ -12,12 +12,36 @@
 <body>
 <section class="main_container">
   <div class="grid_container">
-    <img src="https://picsum.photos/500/300.webp" alt="" class="grid_img_1 img-responsive">
-    <div class="grid_text_media_B c_text">
-      <h3>Lorem ipsum dolor sit.</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aut neque odio quis quos rerum vel? Accusamus
-        debitis dolorum error excepturi illo ipsum labore, nemo obcaecati officia pariatur perferendis possimus quos
-        repudiandae saepe sunt vel veniam voluptate. Delectus nisi, veritatis?</p>
+    <div class="iframe-wrapper">
+      <iframe class="responsive-iframe" width="560" height="315" src="https://www.youtube.com/embed/yWGkw1MSiUw"
+              title="YouTube video player"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+    </div>
+    <div class="grid_text_1 c_text">
+      <h3>Realize higher revenue</h3>
+      <p>Dimensioner read rate has a clear impact on parcel carrier and distribution center profits, especially when you
+        are processing more packages than ever before. </p>
+      <p>With high precision, large optics and a powerful, embedded processor, our dimensioners provide the highest read
+        rates in their class for maximum revenue recovery. The systems can measure at speeds up to 3.3 m/s to keep
+        throughputs high and maximize your uptime. Explore more advantages of the TLD950 dimensioners in this short
+        video.</p>
+    </div>
+    <img src="./Images/Sisteme-Dimensionare_01.webp" alt="Sisteme dimensionare" class="grid_media_1 img-responsive">
+    <div class="grid_text_media c_text">
+      <h3>Achieve seamless connectivity</h3>
+      <p>Automatic data transfer between barcode readers, scales, sorters and cameras make our systems the answer to
+        optimizing operational standards. Embedded OCTO DataCapture™ Software manages data from all components,
+        transforming your dimensioner into a turn-key data capture solution.</p>
+    </div>
+    <img class="grid_img_2B img-responsive" src="./Images/Sisteme-Dimensionare_02.webp" alt="Sisteme dimensionare"/>
+    <div class="grid_text_2 c_text">
+      <h3>Global products for a global industry</h3>
+      <p>With regional hubs in Europe, the Americas and China, we provide support for customers across the globe. Even
+        if you have locations in multiple countries, we offer standardized systems for easy set up and integration into
+        a wide variety of applications.</p>
+      <p>Global Weights and Measures approvals for our products ensure that measurements used for invoicing are
+        accurate, repeatable and legal-for-trade, wherever you are in the world.</p>
     </div>
   </div>
 </section>
